chore: install tailwind

--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
     #root {
       height: 100%;
     }
-
   </style>
 </head>
 <link href="https://fonts.googleapis.com/css2?family=Electrolize&display=swap"
       rel="stylesheet">
+<link href="./index.css"
+      rel="stylesheet" />
 
 <body style="overflow: hidden; font-family: 'Electrolize'">
   <script src="/src/index.tsx"
